--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My SPA</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Battleships</title>
 </head>
 <body>
-    <div id="app"></div> <!-- This div will be the mounting point for our application -->
+    <div id="app">
+
+    </div> <!-- This div will be the mounting point for our application -->
 </body>
 </html>
