--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Battleship</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="app">
-
-    </div> <!-- This div will be the mounting point for our application -->
-</body>
+    </div>
+    <!-- This div will be the mounting point for our application -->
+  </body>
 </html>
