Disable boards after win

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <div id="app">
+      <div class="boards"></div>
+      <div class="controls">
+        <button>Reset</button>
+      </div>
     </div>
     <!-- This div will be the mounting point for our application -->
   </body>
