winner and new game works

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,12 @@
       <div class="controls">
         <button>Reset</button>
       </div>
+      <div class="modal">
+        <div class="modal-content">
+          <h3>Winner text</h3>
+          <button>New Game</button>
+        </div>
+      </div>
     </div>
     <!-- This div will be the mounting point for our application -->
   </body>
